Use rolling bytecode version, address PR
Instead of a major.minor version in the bytecode, we can just use a
simpler approach of a rolling bytecode version, and more simply the
version of the implementation has to be >= the version in the loaded
bytecode.